GNOME Bugzilla – Bug 599446
atk_object_set_name () assertion in gtk_tool_button_set_label
Last modified: 2010-03-02 07:22:09 UTC
as a result functions like gtk_tool_button_new (NULL, NULL) gives a critical warnings CRITICAL **: atk_object_set_name: assertion `name != NULL' failed
Created attachment 146167 [details] [review] Only set the accesible label if it is non-empty This fixes the regression.
Looks good, please commit.
Comment on attachment 146167 [details] [review] Only set the accesible label if it is non-empty commit 57af1cdb8caad86719b6f56d5026c12c7de52464
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
can we get this into the 2-18 branch as well?
sure, feel free to cherry-pick it.
Pushed to gtk-2-18.
*** Bug 602198 has been marked as a duplicate of this bug. ***
*** Bug 600234 has been marked as a duplicate of this bug. ***
*** Bug 608366 has been marked as a duplicate of this bug. ***
I'm using gtk-2-18 and still reproducing this problem dpkg -l libgtk[0-9]* | grep ^i ii libgtk2-perl 1:1.221-4 Perl interface to the 2.x series of the Gimp Toolkit library ii libgtk2.0-0 2.18.3-1ubuntu2.2 The GTK+ graphical user interface library ii libgtk2.0-bin 2.18.3-1ubuntu2.2 The programs for the GTK+ graphical user interface library ii libgtk2.0-cil 2.12.9-1 CLI binding for the GTK+ toolkit 2.12 ii libgtk2.0-common 2.18.3-1ubuntu2.2 Common files for the GTK+ graphical user interface library