Only set the accesible label if it is non-empty

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=599446